# example_collection

./: README.md  components.csv  listnontext  nontext.txt
desktop/fltk/flserterm/: CMakeLists.txt  ceSerial.h  gui.cpp  gui.h  main.cpp
desktop/fltk/fltk-c++/: .gitignore  CMakeLists.txt  Makefile  gui.fl  main.cxx  readme.md
desktop/go/: readme.md
desktop/rust/: readme.md
desktop/vim/: Makefile  vim.tex
embedded/stm8/: Tutorial.md
octave/basic/: coba_lingkar.m
octave/basic_ai/: clasifi.m
octave/basic_filter/: bpfilter.m  run_test.m
octave/basic_signals/: IDFT.asv  IDFT.m  bandPass.m  highPass.m  lowPass.m  toFouImag.m  toFouReal.m
octave/ga_perpan/: create_population.m  filterBound.m
octave/kalman/: kalman.m
octave/kwa_ellen/: kwa_sh_tapis83.m  kwa_tu_tapis83.m
octave/scalogram/: wavelets_gaus4.m  wavelets_haar.m  wavelets_morl.m
octave/signals_digital/: Belajar2.m  coba_respon_psd.m  cobayeyeye.m  continueooo.m  delta.m  fourier.m  konvolusi.m  nisa.m  pulsa2.m  respon_psd.m  simulasi1.mdl  soal31_e.m  soal31_g.m  soal31_j.m  soal_h.m  soale.m  tugas1soal1.m  tugas1soal10.m  tugas1soal2.m  tugas1soal5.m  tugas1soal8.m  tugas1soal9.m  tugas2soal10.m  tugas2soal2.m  tugas2soal3.m  tugas2soal5.m  tugas2soal6.m  tugas2soal9.m  tugas31_g.m  tugas31_j.m  tugas32_e.m  tugas32_f.m  tugas32_g.m  tugas32_h.m  tugas32_i.m  tugas32_j.m  tugas32_m.m  unitstep.m
octave/sparse_audio/: example.m
octave/sparse_sonar/: Backproject.m  EffectiveMeasurement.m  FormatCSImage.m  GenerateS.m  ProcessEchos.m  SRRC.m  SimulateEchos.m  main_compsens.m
(+1734 files in other folders)
